--- a/admin/index/data/network-sys/equip_network.html
+++ b/admin/index/data/network-sys/equip_network.html
@@ -5,14 +5,15 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>我的任务</title>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
-    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <title>设备联网设置</title>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
+    <link rel="stylesheet" href="../../../../static/admin/css/all.min.css"/>
+    <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <!--[if IE 8]>
-    <script type="text/javascript" src="../../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <script src="../../../static/admin/js/basic.js"></script>
+    <script src="../../../../static/admin/js/basic.js"></script>
 </head>
 
 <body>
@@ -23,16 +24,35 @@
 </div>
 
 <script type="text/html" id="toolBar">
-    检索：
-    <div class="layui-inline">
-        <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
+    <div class="addBtn">
+        <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="fas fa-plus"></i></a>
+        <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
     </div>
-    <button class="layui-btn" data-type="reload">搜索</button>
+    <div class="moreBtn hidden-xs">
+        <div class="layui-inline">
+            <input class="layui-input" name="search" placeholder="联网仪编号" id="test-table-demoReload" autocomplete="off">
+        </div>
+        <div class="layui-input-inline">
+            <select name="modules" lay-verify="required" lay-search="">
+                <option value="">全部科室</option>
+                <option value="1">CT室</option>
+                <option value="2">核磁公正室</option>
+                <option value="3">摄片室</option>
+                <option value="4">内外导管室</option>
+                <option value="5">心外ICU</option>
+            </select>
+        </div>
+        <div class="layui-inline">
+            <input class="layui-input" name="search" placeholder="设备编号" id="test-table-de" autocomplete="off">
+        </div>
+        <button class="layui-btn" data-type="reload">搜索</button>
+    </div>
+
 </script>
 <script type="text/html" id="bar">
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">过程记录</a>
+    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">编辑</a>
 </script>
-<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table', function () {
         var table = layui.table;
@@ -46,12 +66,14 @@
             , title: '数据表'
             , minWidth: 1200
             , cols: [[ //表头
-                 {field: 'process_name', title: '任务名称',width:"50%", minWidth: 150}
-                , {field: 'create_date', title: '任务来源', minWidth: 150}
-                , {field: 'Service_monitoring', title: '安排日期', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '指定接受人', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '状态', minWidth: 150, sort: true}
-                , {fixed:'right',minWidth: 100,align:'center',toolbar: "#bar"}
+                  {type:"checkbox"}
+                , {field: 'equip_number', title: '设备编号', minWidth: 150, sort: true}
+                , {field: 'equip_name', title: '设备名称',width:"35%", minWidth: 150}
+                , {field: 'equip_specif', title: '规格', minWidth: 150}
+                , {field: 'equip_id', title: '型号', minWidth: 150, sort: true}
+                , {field: 'netequip_number', title: '联网仪编号', minWidth: 150, sort: true}
+                , {field: 'netequip_ip', title: '联网仪IP', minWidth: 150, sort: true}
+                , {fixed:'right',minWidth: 80,align:'center',toolbar: "#bar"}
             ]]
             , "data": [
                 {
