--- a/admin/index/data/network-sys/equip_overtime.html
+++ b/admin/index/data/network-sys/equip_overtime.html
@@ -5,36 +5,15 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>设备联网设置</title>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
-    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <title>设备加班设置</title>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
+    <link rel="stylesheet" href="../../../../static/admin/css/all.min.css"/>
+    <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <!--[if IE 8]>
-    <script type="text/javascript" src="../../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <script src="../../../static/admin/js/basic.js"></script>
-    <style>
-        #tips {
-            position: fixed;
-            left: 40%;
-            top: 50%;
-            background: rgba(0, 0, 0, 0.75);
-            color: #fff;
-            min-width: 150px;
-            padding: 10px;
-            border-radius: 10px;
-            display:none;
-        }
-
-        .tip_title {
-            width: 60px;
-        }
-
-        .tip_conts {
-            width: auto;
-        }
-    </style>
-
+    <script src="../../../../static/admin/js/basic.js"></script>
 </head>
 
 <body>
@@ -45,19 +24,24 @@
 </div>
 
 <script type="text/html" id="toolBar">
-    <div class="hidden-xs">
+    <div class="addBtn">
+        <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
+    </div>
+    <div class="moreBtn hidden-xs">
         <div class="layui-inline">
-            <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
+            <input class="layui-input" name="search" placeholder="设备编号" autocomplete="off">
+        </div>
+        <div class="layui-inline">
+            <input class="layui-input" name="search" placeholder="设备拼音码" autocomplete="off">
         </div>
         <button class="layui-btn" data-type="reload">搜索</button>
     </div>
-    检索：
 
 </script>
 <script type="text/html" id="bar">
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">过程记录</a>
+    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">编辑</a>
 </script>
-<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table', function () {
         var table = layui.table;
@@ -71,13 +55,14 @@
             , title: '数据表'
             , minWidth: 1200
             , cols: [[ //表头
-                 {field: 'process_name', title: '所在科室', minWidth: 150, sort: true}
-                , {field: 'create_date', title: '设备编号', minWidth: 150}
-                , {field: 'Service_monitoring', title: '设备名称',width:"35%", minWidth: 150}
-                , {field: 'Service_monitoring', title: '型号', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '待机时长', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '工作时长', minWidth: 150, sort: true}
-                , {fixed:'right',minWidth: 100,align:'center',toolbar: "#bar"}
+                  {type:"checkbox"}
+                , {field: 'equip_number', title: '设备编号', minWidth: 150, sort: true}
+                , {field: 'equip_short', title: '设备简称',width:"35%", minWidth: 150}
+                , {field: 'overtime_bdate', title: '加班开始日期', minWidth: 150}
+                , {field: 'overtime_edate', title: '加班结束日期', minWidth: 150, sort: true}
+                , {field: 'overtime_btime', title: '加班开始时间', minWidth: 150, sort: true}
+                , {field: 'overtime_etime', title: '加班结束时间', minWidth: 150, sort: true}
+                , {fixed:'right',minWidth: 80,align:'center',toolbar: "#bar"}
             ]]
             , "data": [
                 {
