--- a/admin/index/data/network-sys/equip_record.html
+++ b/admin/index/data/network-sys/equip_record.html
@@ -5,14 +5,14 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>我的任务</title>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
-    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <title>单机设备运行记录</title>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
+    <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <!--[if IE 8]>
-    <script type="text/javascript" src="../../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <script src="../../../static/admin/js/basic.js"></script>
+    <script src="../../../../static/admin/js/basic.js"></script>
 </head>
 
 <body>
@@ -23,16 +23,18 @@
 </div>
 
 <script type="text/html" id="toolBar">
-    检索：
-    <div class="layui-inline">
-        <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
+    <div class="hidden-xs">
+        检索：
+        <div class="layui-inline">
+            <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
+        </div>
+        <button class="layui-btn" data-type="reload">搜索</button>
     </div>
-    <button class="layui-btn" data-type="reload">搜索</button>
 </script>
 <script type="text/html" id="bar">
     <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">过程记录</a>
 </script>
-<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table', function () {
         var table = layui.table;
@@ -46,11 +48,12 @@
             , title: '数据表'
             , minWidth: 1200
             , cols: [[ //表头
-                 {field: 'process_name', title: '任务名称',width:"50%", minWidth: 150}
-                , {field: 'create_date', title: '任务来源', minWidth: 150}
-                , {field: 'Service_monitoring', title: '安排日期', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '指定接受人', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '状态', minWidth: 150, sort: true}
+                 {field: 'equip_room', title: '所在科室', minWidth: 150, sort: true}
+                , {field: 'equip_number', title: '设备编号', minWidth: 150}
+                , {field: 'equip_name', title: '设备名称',width:"35%", minWidth: 150}
+                , {field: 'equip_id', title: '型号', minWidth: 150, sort: true}
+                , {field: 'equip_wtime', title: '待机时长', minWidth: 150, sort: true}
+                , {field: 'equip_long', title: '工作时长', minWidth: 150, sort: true}
                 , {fixed:'right',minWidth: 100,align:'center',toolbar: "#bar"}
             ]]
             , "data": [
