--- a/admin/index/data/network-sys/room_record.html
+++ b/admin/index/data/network-sys/room_record.html
@@ -5,36 +5,14 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>单机设备运行记录</title>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
-    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <title>使用科室设备运行记录</title>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
+    <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <!--[if IE 8]>
-    <script type="text/javascript" src="../../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <script src="../../../static/admin/js/basic.js"></script>
-    <style>
-        #tips {
-            position: fixed;
-            left: 40%;
-            top: 50%;
-            background: rgba(0, 0, 0, 0.75);
-            color: #fff;
-            min-width: 150px;
-            padding: 10px;
-            border-radius: 10px;
-            display:none;
-        }
-
-        .tip_title {
-            width: 60px;
-        }
-
-        .tip_conts {
-            width: auto;
-        }
-    </style>
-
+    <script src="../../../../static/admin/js/basic.js"></script>
 </head>
 
 <body>
@@ -45,23 +23,38 @@
 </div>
 
 <script type="text/html" id="toolBar">
-    <div class="hidden-xs">
-        <div class="layui-inline">
-            <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
+    <form class="layui-form layui-form-pane hidden-xs" action="">
+        <div class="layui-input-inline">
+            <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
         </div>
-        <button class="layui-btn" data-type="reload">搜索</button>
-    </div>
-    检索：
-
+            <div class="layui-input-inline">
+                <select name="modules" lay-verify="required" lay-search="">
+                    <option value="">输入搜索部门</option>
+                    <option value="1">CT室</option>
+                    <option value="2">核磁公正室</option>
+                    <option value="3">摄片室</option>
+                    <option value="4">内外导管室</option>
+                    <option value="5">心外ICU</option>
+                </select>
+            </div>
+            <div class="layui-input-inline">
+                <button class="layui-btn" lay-submit="" lay-filter="demo1">查找</button>
+            </div>
+    </form>
 </script>
 <script type="text/html" id="bar">
     <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">过程记录</a>
 </script>
-<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table', function () {
-        var table = layui.table;
-
+    layui.use(['table','form','laydate'], function () {
+        var table = layui.table
+            ,form = layui.form
+            ,laydate = layui.laydate;
+        laydate.render({
+            elem: '#date',
+            type:'date'
+        });
         //第一个实例
         table.render({
             elem: '#table'
@@ -71,13 +64,10 @@
             , title: '数据表'
             , minWidth: 1200
             , cols: [[ //表头
-                 {field: 'process_name', title: '所在科室', minWidth: 150, sort: true}
-                , {field: 'create_date', title: '设备编号', minWidth: 150}
-                , {field: 'Service_monitoring', title: '设备名称',width:"35%", minWidth: 150}
-                , {field: 'Service_monitoring', title: '型号', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '待机时长', minWidth: 150, sort: true}
+                 {field: 'process_name', title: '科室', minWidth: 150, sort: true}
+                , {field: 'create_date', title: '台数', minWidth: 150, sort: true}
                 , {field: 'Service_monitoring', title: '工作时长', minWidth: 150, sort: true}
-                , {fixed:'right',minWidth: 100,align:'center',toolbar: "#bar"}
+                , {field: 'Service_monitoring', title: '待机时长', minWidth: 150, sort: true}
             ]]
             , "data": [
                 {
