--- a/admin/index/data/network-sys/run_record.html
+++ b/admin/index/data/network-sys/run_record.html
@@ -5,14 +5,15 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>我的任务</title>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
-    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <title>运行记录</title>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
+    <link rel="stylesheet" href="../../../../static/admin/css/all.min.css"/>
+    <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <!--[if IE 8]>
-    <script type="text/javascript" src="../../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <script src="../../../static/admin/js/basic.js"></script>
+    <script src="../../../../static/admin/js/basic.js"></script>
 </head>
 
 <body>
@@ -23,16 +24,31 @@
 </div>
 
 <script type="text/html" id="toolBar">
-    检索：
-    <div class="layui-inline">
-        <input class="layui-input" name="search" id="test-table-demoReload" autocomplete="off">
+    <div class="addBtn">
+        <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
     </div>
-    <button class="layui-btn" data-type="reload">搜索</button>
+    <div class="moreBtn hidden-xs">
+        <form class="layui-form layui-form-pane" action="">
+            <div class="layui-input-inline">
+                <input type="text" name="date" id="date" lay-verify="date" placeholder="开始时间" autocomplete="off" class="layui-input">
+            </div>
+            <span>-</span>
+            <div class="layui-input-inline">
+                <input type="text" name="date1" id="date1" lay-verify="date" placeholder="结束时间" autocomplete="off" class="layui-input">
+            </div>
+            <div class="layui-inline">
+                <input class="layui-input" name="search" placeholder="联网仪编号" autocomplete="off">
+            </div>
+            <div class="layui-input-inline">
+                <button class="layui-btn" lay-submit="" lay-filter="demo1">查找</button>
+            </div>
+        </form>
+    </div>
 </script>
 <script type="text/html" id="bar">
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">过程记录</a>
+    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">编辑</a>
 </script>
-<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table', function () {
         var table = layui.table;
@@ -46,12 +62,17 @@
             , title: '数据表'
             , minWidth: 1200
             , cols: [[ //表头
-                 {field: 'process_name', title: '任务名称',width:"50%", minWidth: 150}
-                , {field: 'create_date', title: '任务来源', minWidth: 150}
-                , {field: 'Service_monitoring', title: '安排日期', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '指定接受人', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '状态', minWidth: 150, sort: true}
-                , {fixed:'right',minWidth: 100,align:'center',toolbar: "#bar"}
+                  {type:"checkbox"}
+                , {field: 'equip_room', title: '所在科室', minWidth: 150, sort: true}
+                , {field: 'equip_number', title: '设备编号', minWidth: 150, sort: true}
+                , {field: 'equip_short', title: '资产编号', minWidth: 150}
+                , {field: 'overtime_bdate', title: '设备名称', minWidth: 150}
+                , {field: 'overtime_edate', title: '联网仪编号', minWidth: 150, sort: true}
+                , {field: 'overtime_btime', title: '状态标识', minWidth: 150, sort: true}
+                , {field: 'overtime_etime', title: '状态名称', minWidth: 150, sort: true}
+                , {field: 'overtime_edate', title: '收包时间', minWidth: 150, sort: true}
+                , {field: 'overtime_btime', title: '开始时间', minWidth: 150, sort: true}
+                , {field: 'overtime_etime', title: '结束时间', minWidth: 150, sort: true}
             ]]
             , "data": [
                 {
