--- a/admin/index/system/system-setup/information-entry.html
+++ b/admin/index/system/system-setup/information-entry.html
@@ -7,9 +7,9 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>设备信息录入</title>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
-    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
+    <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <style type="text/css">
         .layui-form-label{
             padding: 8px 10px!important;
@@ -380,7 +380,7 @@
 </div>
 
 
-<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use(['layer','form','laydate','element'],function(){
         var form = layui.form;
