--- a/admin/index/system/system-setup/information-import.html
+++ b/admin/index/system/system-setup/information-import.html
@@ -7,9 +7,9 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>设备信息导入</title>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/layui/css/layui.css"/>
-    <link rel="stylesheet" type="text/css" href="../../../static/admin/css/admin.css"/>
-    <script src="../../../static/admin/js/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
+    <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
     <style type="text/css">
         .title{
             width:90%;
@@ -33,7 +33,7 @@
 </div>
 
 
-<script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
 
 </script>
